# event-intelligence-platform

./: .env.example  .gitignore  .ruff.toml  LICENSE  README.md  mypy.ini  package-lock.json  package.json  pyproject.toml  pytest.ini  setup.cfg  turbo.json
services/admin/: .env.example  Dockerfile  README.md  __init__.py  pyproject.toml
services/admin/src/: database.py  main.py
services/admin/src/auth/: dependencies.py  jwt.py
services/admin/src/models/: user.py
services/admin/src/routers/: api_keys.py  auth.py  users.py
services/admin/src/schemas/: user.py
services/api/: .env.example  pyproject.toml
services/api/src/: __init__.py  main.py
services/api/src/agents/: __init__.py  extraction_models.py  feature_extractor.py  llm_client.py  loader.py  taxonomy_retriever.py
services/api/src/agents/base/: __init__.py  base_agent.py  output_models.py  task.py
services/api/src/agents/classification/: core_metadata.yaml
services/api/src/agents/enrichment/: __init__.py  artist_enricher_agent.py  data_quality_agent.py  deduplication_agent.py  emotion_mapper_agent.py  experience_pulse.yaml  feature_alignment_agent.py  logistics.yaml  taxonomy_classifier_agent.py
services/api/src/agents/llm/: __init__.py  anthropic_client.py  base_llm_client.py  ollama_client.py  openai_client.py  provider_router.py
services/api/src/agents/mcp/: __init__.py  fastmcp_client.py  fastmcp_server.py  mcp_client.py  readers.py  writers.py
services/api/src/agents/orchestration/: __init__.py  agent_runner.py  pipeline_triggers.py
services/api/src/agents/registry/: __init__.py  agent_registry.py  prompt_registry.py
services/api/src/agents/validation/: __init__.py  confidence.py  schema_validator.py
services/api/src/assets/: barcelona_sources_mega_catalog_v1_2.json  human_experience_taxonomy_master.json  llm_enrichment_contract.json  realtime_event_sources_catalog_v1.json
services/api/src/auth/: __init__.py  hashing.py
services/api/src/configs/: __init__.py  agents.yaml  config.py  ingestion.yaml  settings.py
services/api/src/ingestion/: __init__.py  base_pipeline.py  batch_writer.py  deduplication.py  factory.py  orchestrator.py  persist.py  source_detector.py  taxonomy_loader.py
services/api/src/ingestion/adapters/: __init__.py  api_adapter.py  base_adapter.py  scraper_adapter.py
services/api/src/ingestion/normalization/: __init__.py  currency.py  feature_extractor.py  field_mapper.py  llm_client.py  location_parser.py  taxonomy_mapper.py
services/api/src/ingestion/pipelines/: base_pipeline.py
services/api/src/routes/: __init__.py
services/api/src/schemas/: __init__.py  event.py  features.py  taxonomy.py  user.py
services/api/src/scrapping/scrapping/: cli.py  orchestrator.py
services/scrapping/: .gitignore  CHANGELOG.md  DEV.md  README.md  __init__.py  cli.py  pyproject.toml  pytest.ini  requirements.txt
services/scrapping/.github/workflows/: ci.yml
services/scrapping/docs/: ANTI_BOT_PLAYBOOK.md  ARCHITECTURE.md  CONFIG_SPEC.md  README.md  RUNBOOK.md  config_schema.md  engines.md
services/scrapping/examples/configs/: example_http_jobs.json  example_hybrid_js.json  example_multi_sources.json
services/scrapping/examples/configs/real/: browser_infinite_scroll_demo.json  browser_quotes_js.json  http_books.json  http_quotes.json  hybrid_listing_http_detail_browser.json
services/scrapping/generated_configs/sources/: ra_co_scraper_auto.json  ticketmaster_scraper_auto.json
services/scrapping/notebooks/: 00_scrapping_capabilities_and_methodology.ipynb  01_end_to_end_walkthrough_example_multi_sources.ipynb  02_online_scraping_playbook.ipynb  03_http_engine_cases.ipynb  04_browser_engine_cases.ipynb  05_hybrid_engine_cases.ipynb  06_alibaba_l3_migration.ipynb  07_jobs_aggregator_recipe.ipynb  README.md  requirements-notebooks.txt
services/scrapping/scrapping/: __init__.py  cli.py  orchestrator.py
services/scrapping/scrapping/actions/: __init__.py  browser_actions.py  human_like.py
services/scrapping/scrapping/ai/: __init__.py  config_agent.py  tests_agent.py
services/scrapping/scrapping/config/: __init__.py  loader.py  migration.py  schema.py
services/scrapping/scrapping/diagnostics/: classifiers.py  signals.py
services/scrapping/scrapping/engines/: __init__.py  base.py  browser.py  http.py  hybrid.py
services/scrapping/scrapping/extraction/: __init__.py  link_extractors.py  parsers.py  transforms.py
services/scrapping/scrapping/monitoring/: __init__.py  events.py  logging.py  metrics.py  reporting.py
services/scrapping/scrapping/pipeline/: __init__.py  dedupe.py  stages.py  validators.py
services/scrapping/scrapping/processing/: __init__.py  classifiers.py  html_to_structured.py  quality_filters.py
services/scrapping/scrapping/recipes/: __init__.py  alibaba_l3.py  jobs_aggregator.py
services/scrapping/scrapping/recipes/core/: __init__.py  artifacts.py  phases.py  state.py  tracking.py
services/scrapping/scrapping/runtime/: blocks.py  resilience.py  results.py
services/scrapping/scrapping/scheduling/: __init__.py  prefect_flows.py  schedule.py
services/scrapping/scrapping/schemas/: items.py  job_items.py
services/scrapping/scrapping/storage/: __init__.py  layouts.py  writers.py
services/scrapping/tests/: test_alibaba_recipe_phases.py  test_alibaba_recipe_resume.py  test_alibaba_reporting.py  test_alibaba_tracking.py  test_browser_integration.py  test_cli.py  test_cli_recipes.py  test_cli_tooling.py  test_config.py  test_diagnostics.py  test_integration.py  test_jobs_aggregator.py  test_migration.py  test_observability.py  test_processing.py  test_runtime.py  test_scripts.py  test_storage.py
services/scrapping/tests/fixtures/: config_minimal_http.json
services/scrapping/tests/fixtures/html/: detail_books.html  detail_emploi_ma.html  detail_infinite_scroll.html  detail_linkedin_guest.html  detail_naukrigulf.html  detail_quotes.html  detail_rekrute.html  listing_books.html  listing_emploi_ma.html  listing_quotes.html  (+4 more)
services/scrapping/tests/unit/: test_browser_engine.py  test_doctor_deps.py  test_doctor_loop.py  test_schemas.py
(+313 files in other folders)
