[project]
name = "event-intelligence-platform"
version = "0.1.0"
description = "Multi-source event intelligence and experimentation platform"
requires-python = ">=3.11"

dependencies = [
    "pandas>=2.1",
    "numpy>=1.26",
    "pydantic>=2.5",
    "requests>=2.31",
    "sqlalchemy>=2.0",
    "pyyaml>=6.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4",
    "ruff>=0.2",
    "mypy>=1.8",
    "pre-commit>=3.6",
]
