[project]
name = "event-intelligence-platform"
version = "0.1.0"
description = "Multi-source event intelligence and experimentation platform"
requires-python = ">=3.11, <3.13"

dependencies = [
    "pandas>=2.1",
    "numpy>=1.26",
    "pydantic>=2.5",
    "requests>=2.31",
    "sqlalchemy>=2.0",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    # Testing
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ipykernel>=6.29.0",

    # Linting / formatting
    "ruff>=0.2",
    "pydocstyle>=6.3",
    "black>=24.1",

    # Typing
    "mypy>=1.8",

    # Dev tooling
    "pre-commit>=3.6",
]
