[project]
name = "event-intelligence-platform-api"
version = "0.1.0"
description = "Multi-source event intelligence and experimentation platform API"
requires-python = ">=3.11, <3.13"

dependencies = [
    "pandas>=2.1",
    "numpy>=1.26",
    "pyarrow>=15.0",
    "fastparquet>=2024.2.0",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "requests>=2.31",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pyyaml>=6.0",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "playwright>=1.40",
    "matplotlib>=3.8",
    "openai>=1.0.0",
    "instructor>=1.0.0",
    "python-dotenv>=1.0",
    "geopy>=2.4",
]

[dependency-groups]
dev = [

    # Testing
    "pytest>=7.4",
    "pytest-cov>=4.1",

    # Notebook support
    "ipykernel>=6.29.0",

    # Linting / formatting
    "ruff>=0.2",
    "black>=24.1",
    "pydocstyle>=6.3",
    "isort>=5.13.2",

    # Typing
    "mypy>=1.8",
]


[tool.ruff.lint]
exclude = ["notebooks"]
