[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scrapping"
version = "0.1.0"
description = "Config-driven, extensible scraping library with multiple engines, QA pipeline, storage, and optional scheduling/AI agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Your Data Science Team", email = "dev@your-org.example" }
]
keywords = ["scraping", "crawler", "automation", "data-pipeline", "prefect", "playwright"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries",
]

dependencies = [
  "requests>=2.31.0",
  "pydantic>=2.7.0",
  "beautifulsoup4>=4.12.2",
  "lxml>=5.2.0",
]

[project.optional-dependencies]
# Better main-text extraction
extract = [
  "trafilatura>=1.8.0",
]

# Browser automation / JS-heavy sites
browser = [
  "playwright>=1.43.0",
]

# Notebook support
notebooks = [
  "jupyterlab>=4.2.0",
  "ipykernel>=6.29.0",
  "pandas>=2.2.0",
]

# Storage formats
storage = [
  "pandas>=2.2.0",
  "pyarrow>=16.0.0",
]

# Scheduling/orchestration
scheduling = [
  "prefect>=2.16.0",
]

# Lightweight ML hooks for classifiers
ai = [
  "joblib>=1.4.0",
  "scikit-learn>=1.5.0",
  "rapidfuzz>=3.9.0",
]

# Dev tooling
dev = [
  "pyyaml>=6.0",
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "pytest-xdist>=3.6.0",
  "ruff>=0.6.0",
  "black>=24.4.0",
  "mypy>=1.10.0",
  "types-requests>=2.32.0.20240712",
]

# A convenient "everything" extra for power users / CI
all = [
  "trafilatura>=1.8.0",
  "playwright>=1.43.0",
  "pandas>=2.2.0",
  "pyarrow>=16.0.0",
  "prefect>=2.16.0",
  "joblib>=1.4.0",
  "scikit-learn>=1.5.0",
  "rapidfuzz>=3.9.0",
]

[project.scripts]
# Provides the `scrap` command:
#   scrap run ...
#   scrap validate ...
#   scrap doctor ...
scrap = "scrapping.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["scrapping"]

# ---------------------------
# Tooling configuration
# ---------------------------

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false
ignore_missing_imports = true
pretty = true

